--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,29 @@
         "deque": "cpp",
         "filesystem": "cpp",
         "iterator": "cpp",
-        "__locale": "cpp"
+        "__locale": "cpp",
+        "array": "cpp",
+        "complex": "cpp",
+        "list": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "memory_resource": "cpp",
+        "string_view": "cpp",
+        "initializer_list": "cpp",
+        "stop_token": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp",
+        "__bit_reference": "cpp",
+        "__hash_table": "cpp",
+        "__node_handle": "cpp",
+        "__split_buffer": "cpp",
+        "__tree": "cpp",
+        "functional": "cpp",
+        "map": "cpp",
+        "memory": "cpp",
+        "queue": "cpp",
+        "set": "cpp",
+        "stack": "cpp"
     }
 }
